--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <canvas id="theCanvas" width="800" height="640"></canvas>
-    <script src="jquery/jquery-2.1.1.min.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/engine.js"></script>
     <script src="js/brickvast.js"></script>
     <script>buildAndRun();</script>
