more organization, more tests

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Brickvast</title>
+    <script src="js/jquery-2.1.1.min.js" async></script>
+    <script src="js/engine.js" async></script>
+    <script src="js/brickvast.js" async></script>
 </head>
 <body>
     <canvas id="theCanvas" width="800" height="640"></canvas>
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/engine.js"></script>
-    <script src="js/brickvast.js"></script>
-    <script>buildAndRun();</script>
 </body>
 </html>
