--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Brickvast</title>
-    <script src="js/jquery-2.1.1.min.js" async></script>
-    <script src="js/engine.js" async></script>
-    <script src="js/brickvast.js" async></script>
+    <script src="js/jquery-2.1.1.min.js" defer></script>
+    <script src="js/engine.js" defer></script>
+    <script src="js/brickvast.js" defer></script>
 </head>
 <body>
     <canvas id="theCanvas" width="800" height="640"></canvas>
