--- a/demo_mazegame1.html
+++ b/demo_mazegame1.html
@@ -3,7 +3,13 @@
 <head>
     <title>Demo: Maze Game 1</title>
     <script src="js/jquery-2.1.1.min.js" defer></script>
-    <script src="js/engine.js" defer></script>
+    <script src="js/AssetManager.js" defer></script>
+    <script src="js/MathUtil.js" defer></script>
+    <script src="js/TheDOM.js" defer></script>
+    <script src="js/CanvasManager.js" defer></script>
+    <script src="js/Entity.js" defer></script>
+    <script src="js/Controller.js" defer></script>
+    <script src="js/Game.js" defer></script>
     <script src="js/engine_demo/demo_mazegame1.js" defer></script>
 </head>
 <body>
