--- a/demo_drawing1.html
+++ b/demo_drawing1.html
@@ -3,14 +3,14 @@
 <head>
     <title>Demo: Drawing 1</title>
     <script src="js/jquery-2.1.1.min.js" defer></script>
-    <script src="js/AssetManager.js" defer></script>
-    <script src="js/MathUtil.js" defer></script>
-    <script src="js/TheDOM.js" defer></script>
-    <script src="js/CanvasManager.js" defer></script>
-    <script src="js/Entity.js" defer></script>
-    <script src="js/Controller.js" defer></script>
-    <script src="js/Game.js" defer></script>
-    <script src="js/engine_demo/demo_drawing1.js" defer></script>
+    <script src="js/engine/AssetManager.js" defer></script>
+    <script src="js/engine/MathUtil.js" defer></script>
+    <script src="js/engine/TheDOM.js" defer></script>
+    <script src="js/engine/CanvasManager.js" defer></script>
+    <script src="js/engine/Entity.js" defer></script>
+    <script src="js/engine/Controller.js" defer></script>
+    <script src="js/engine/Game.js" defer></script>
+    <script src="demo/demo_drawing1.js" defer></script>
 </head>
 <body>
     <canvas id="theCanvas" width="640" height="480"></canvas>
