finished scrolling views
working on maze example

--- a/demo_mazegame1.html
+++ b/demo_mazegame1.html
@@ -12,7 +12,7 @@
     <script src="js/engine/Game.js" defer></script>
     <script src="demo/demo_mazegame1.js" defer></script>
 </head>
-<body>
+<body style="background-color: #000;">
     <canvas id="theCanvas" width="640" height="512"></canvas>
 </body>
 </html>
