configured Grunt, removed jQuery dependency
build with closure & copy to demo directory, configured jasmine with
grunt

--- a/demo/sounds1/demo_sounds1.html
+++ b/demo/sounds1/demo_sounds1.html
@@ -2,15 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Demo: Sounds 1</title>
-    <script src="../../vendor/jquery-2.1.1.min.js" defer></script>
-    <script src="../../src/MathUtil.js" defer></script>
-    <script src="../../src/Canvas.js" defer></script>
-    <script src="../../src/Entity.js" defer></script>
-    <script src="../../src/Controller.js" defer></script>
-    <script src="../../src/Game.js" defer></script>
+    <script src="../vastengine.js" defer></script>
     <script src="demo_sounds1.js" defer></script>
 </head>
 <body>
-    <canvas id="theCanvas" width="640" height="480"></canvas>
 </body>
 </html>
