added css reset

--- a/demo/mazegame/demo_mazegame1.html
+++ b/demo/mazegame/demo_mazegame1.html
@@ -2,14 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Demo: Maze Game 1</title>
+    <link rel="stylesheet" href="../reset.css" />
     <script src="../vastengine.js" defer></script>
-    <!--<script src="../../src/Canvas.js" defer></script>
-    <script src="../../src/Controller.js" defer></script>
-    <script src="../../src/Entity.js" defer></script>
-    <script src="../../src/MathUtil.js" defer></script>
-    <script src="../../src/Game.js" defer></script>-->
     <script src="demo_mazegame1.js" defer></script>
 </head>
-<body style="background-color: #000;">
-</body>
+<body style="background-color: #000"></body>
 </html>
