--- a/demo/sounds1/demo_sounds1.html
+++ b/demo/sounds1/demo_sounds1.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Demo: Sounds 1</title>
+    <link rel="stylesheet" href="../reset.css" />
     <script src="../vastengine.js" defer></script>
     <script src="demo_sounds1.js" defer></script>
 </head>
-<body>
-</body>
+<body></body>
 </html>
