--- a/demo/drawing1/demo_drawing1.html
+++ b/demo/drawing1/demo_drawing1.html
@@ -3,16 +3,17 @@
 <head>
     <title>Demo: Drawing 1</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE:
-    <script src="../../src/Canvas.js" defer></script>
+    <!-- RELEASE: -->
+    <script src="../../build/vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG:   -->
+    <!-- DEBUG: 
+    <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
     <script src="../../src/Game.js" defer></script>
+    <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
-    <script src="demo_mazegame1.js" defer></script>
     <!-- -->
     <script src="demo_drawing1.js" defer></script>
 </head>
