--- a/demo/mazegame/demo_mazegame1.html
+++ b/demo/mazegame/demo_mazegame1.html
@@ -3,17 +3,19 @@
 <head>
     <title>Demo: Maze Game 1</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE:
-    <script src="../../src/Canvas.js" defer></script>
+    <!-- RELEASE: 
+    <script src="../../build/vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG:   -->
+    <!-- DEBUG: -->
+    <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
     <script src="../../src/Game.js" defer></script>
+    <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
-    <script src="demo_mazegame1.js" defer></script>
     <!-- -->
+    <script src="demo_mazegame1.js" defer></script>
 </head>
 <body style="background-color: #000"></body>
 </html>
