--- a/demo/mazegame/demo_mazegame1.html
+++ b/demo/mazegame/demo_mazegame1.html
@@ -10,6 +10,7 @@
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
+    <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
     <script src="../../src/Game.js" defer></script>
     <script src="../../src/Input.js" defer></script>
