created Android WebView wrapper

--- a/VastDroid/app/src/main/assets/demo/dialog_test/dialogs.html
+++ b/VastDroid/app/src/main/assets/demo/dialog_test/dialogs.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Demo: Maze Game 1</title>
+    <title>Demo: Drawing 1</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: --> 
+    <!-- RELEASE: 
     <script src="../../build/vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG: 
+    <!-- DEBUG: -->
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
@@ -16,7 +16,7 @@
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
     <!-- -->
-    <script src="demo_mazegame1.js" defer></script>
+    <script src="dialogs.js" defer></script>
 </head>
-<body style="background-color: #000"></body>
+<body></body>
 </html>
