--- a/VastDroid/app/src/main/assets/demo/mazegame/demo_mazegame1.html
+++ b/VastDroid/app/src/main/assets/demo/mazegame/demo_mazegame1.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Demo: Maze Game 1</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link rel="stylesheet" href="../reset.css" />
     <!-- RELEASE: --> 
     <script src="../../build/vastengine.js" defer></script>
