--- a/VastDroid/app/src/main/assets/demo/rooms/rooms.html
+++ b/VastDroid/app/src/main/assets/demo/rooms/rooms.html
@@ -3,10 +3,10 @@
 <head>
     <title>Demo: Maze Game 1</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: --> 
+    <!-- RELEASE: 
     <script src="../../build/vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG: 
+    <!-- DEBUG: --> 
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
@@ -16,7 +16,7 @@
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
     <!-- -->
-    <script src="demo_mazegame1.js" defer></script>
+    <script src="rooms.js" defer></script>
 </head>
 <body style="background-color: #000"></body>
 </html>
