--- a/VastDroid/app/src/main/assets/demo/drawing1/demo_drawing1.html
+++ b/VastDroid/app/src/main/assets/demo/drawing1/demo_drawing1.html
@@ -1,22 +1,21 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Demo: Maze Game 1</title>
+    <title>Demo: Drawing 1</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: --> 
+    <!-- RELEASE: 
     <script src="../../build/vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG: 
+    <!-- DEBUG: -->
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
-    <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
     <script src="../../src/Game.js" defer></script>
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
     <!-- -->
-    <script src="demo_mazegame1.js" defer></script>
+    <script src="demo_drawing1.js" defer></script>
 </head>
-<body style="background-color: #000"></body>
+<body></body>
 </html>
