--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Testing github pages. This is a little weird, but may work.
+I swear this web page won't suck one day. Until then, it's gonna suck.
+
+Here's a link to the in-progress API documentation:
+http://cynicollision.github.io/vastengine/api/
