cleaning up demo folder

--- a/demo/demo_rooms/rooms.html
+++ b/demo/demo_rooms/rooms.html
@@ -16,7 +16,7 @@
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
     <!-- -->
-    <script src="demo_mazegame1.js" defer></script>
+    <script src="rooms.js" defer></script>
 </head>
 <body style="background-color: #000"></body>
 </html>
