--- a/demo/demo_sounds/sounds.html
+++ b/demo/demo_sounds/sounds.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Demo: Drawing 1</title>
+    <title>Demo: Sounds</title>
     <link rel="stylesheet" href="../reset.css" />
     <!-- RELEASE: -->
     <script src="../../build/vastengine.js" defer></script>
@@ -10,12 +10,13 @@
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
+    <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
     <script src="../../src/Game.js" defer></script>
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
     <!-- -->
-    <script src="demo_drawing1.js" defer></script>
+    <script src="sounds.js" defer></script>
 </head>
 <body></body>
 </html>
