--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 I swear this web page won't suck one day. Until then, it's gonna suck.
 <br /><br />
-<a href="http://cynicollision.github.io/vastengine/api/">Here's a link to the in-progress API documentation for now.</a>
+<a href="http://cynicollision.github.io/vastengine/doc/">Here's a link to the in-progress API documentation for now.</a>
 
