moved Canvas, Audio, and Image from vastengine.Game

--- a/engine/demo/demo_sprites/sprites.html
+++ b/engine/demo/demo_sprites/sprites.html
@@ -8,7 +8,7 @@
     <!-- -->
     <!-- DEBUG: -->
     <script src="../../src/AssetManager.js" defer></script>
-    <script src="../../src/Canvas.js" defer></script>
+    <script src="../../src/CanvasManager.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
