--- a/engine/demo/demo_dialogs/dialogs.html
+++ b/engine/demo/demo_dialogs/dialogs.html
@@ -3,12 +3,12 @@
 <head>
     <title>Demo: Drawing 1</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: 
+    <!-- RELEASE: -->
     <script src="../vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG: -->
+    <!-- DEBUG: 
     <script src="../../src/AssetManager.js" defer></script>
-    <script src="../../src/Canvas.js" defer></script>
+    <script src="../../src/CanvasManager.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
