more work on Sprite

--- a/engine/demo/demo_mazegame/mazegame.html
+++ b/engine/demo/demo_mazegame/mazegame.html
@@ -3,10 +3,10 @@
 <head>
     <title>Demo: Maze Game</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: --> 
+    <!-- RELEASE: 
     <script src="../vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG: 
+    <!-- DEBUG: --> 
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/CanvasManager.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
@@ -15,6 +15,7 @@
     <script src="../../src/Game.js" defer></script>
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
+    <script src="../../src/Sprite.js" defer></script>
     <!-- -->
     <script src="mazegame.js" defer></script>
 </head>
