moved vastengine.Game.Config to vastengine.Config
Also working on removing references to Dialog from the main game loop.

--- a/engine/demo/demo_mazegame/mazegame.html
+++ b/engine/demo/demo_mazegame/mazegame.html
@@ -9,6 +9,7 @@
     <!-- DEBUG: --> 
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/CanvasManager.js" defer></script>
+    <script src="../../src/Config.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Debug.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
