--- a/engine/demo/demo_sprites/sprites.html
+++ b/engine/demo/demo_sprites/sprites.html
@@ -10,6 +10,7 @@
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/CanvasManager.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
+    <script src="../../src/Config.js" defer></script>
     <script src="../../src/Debug.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
