--- a/engine/demo/demo_mazegame/mazegame.html
+++ b/engine/demo/demo_mazegame/mazegame.html
@@ -8,7 +8,7 @@
     <!-- -->
     <!-- DEBUG: --> 
     <script src="../../src/AssetManager.js" defer></script>
-    <script src="../../src/CanvasManager.js" defer></script>
+    <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Config.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Debug.js" defer></script>
