--- a/engine/demo/demo_sprites/sprites.html
+++ b/engine/demo/demo_sprites/sprites.html
@@ -8,9 +8,9 @@
     <!-- -->
     <!-- DEBUG: -->
     <script src="../../src/AssetManager.js" defer></script>
-    <script src="../../src/CanvasManager.js" defer></script>
-    <script src="../../src/Controller.js" defer></script>
+    <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Config.js" defer></script>
+    <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Debug.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
