fix to Input class
vastengine.Game.state no longer accessible

--- a/engine/demo/demo_rooms/rooms.html
+++ b/engine/demo/demo_rooms/rooms.html
@@ -3,18 +3,20 @@
 <head>
     <title>Demo: Rooms</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: -->
+    <!-- RELEASE: 
     <script src="../vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG:  
+    <!-- DEBUG:  -->
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
+    <script src="../../src/Config.js" defer></script>
     <script src="../../src/Controller.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
     <script src="../../src/Game.js" defer></script>
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
+    <script src="../../src/Sprite.js" defer></script>
     <!-- -->
     <script src="rooms.js" defer></script>
 </head>
