--- a/engine/demo/demo_mazegame/mazegame.html
+++ b/engine/demo/demo_mazegame/mazegame.html
@@ -7,6 +7,7 @@
     <script src="../vastengine.js" defer></script>
     <!-- -->
     <!-- DEBUG: --> 
+    <script src="../../src/namespace.js" defer></script>
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Config.js" defer></script>
