--- a/engine/demo/demo_rooms/rooms.html
+++ b/engine/demo/demo_rooms/rooms.html
@@ -3,10 +3,11 @@
 <head>
     <title>Demo: Rooms</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: 
+    <!-- RELEASE: -->
     <script src="../vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG:  -->
+    <!-- DEBUG:  
+    <script src="../../src/namespace.js" defer></script>
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
     <script src="../../src/Config.js" defer></script>
