--- a/engine/demo/demo_sprites/sprites.html
+++ b/engine/demo/demo_sprites/sprites.html
@@ -15,6 +15,7 @@
     <script src="../../src/Debug.js" defer></script>
     <script src="../../src/Dialog.js" defer></script>
     <script src="../../src/Entity.js" defer></script>
+    <script src="../../src/Error.js" defer></script>
     <script src="../../src/Game.js" defer></script>
     <script src="../../src/Input.js" defer></script>
     <script src="../../src/MathUtil.js" defer></script>
