--- a/engine/demo/vastgame/vastgame.html
+++ b/engine/demo/vastgame/vastgame.html
@@ -3,10 +3,10 @@
 <head>
     <title>Demo: Maze Game</title>
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: 
+    <!-- RELEASE: -->
     <script src="../vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG: --> 
+    <!-- DEBUG:  
     <script src="../../src/namespace.js" defer></script>
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
