working on vastgame Player

--- a/engine/demo/vastgame/vastgame.html
+++ b/engine/demo/vastgame/vastgame.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Demo: Maze Game</title>
+    <title>vastgame</title>
     <link rel="stylesheet" href="../reset.css" />
     <!-- RELEASE: -->
     <script src="../vastengine.js" defer></script>
