--- a/engine/demo/vastgame/vastgame.html
+++ b/engine/demo/vastgame/vastgame.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>vastgame</title>
+	<meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../reset.css" />
     <!-- RELEASE: -->
     <script src="../vastengine.js" defer></script>
