--- a/engine/demo/vastgame/vastgame.html
+++ b/engine/demo/vastgame/vastgame.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>vastgame</title>
 	<meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../reset.css" />
-    <!-- RELEASE: -->
+    <!-- RELEASE: 
     <script src="../vastengine.js" defer></script>
     <!-- -->
-    <!-- DEBUG:  
+    <!-- DEBUG: -->
     <script src="../../src/namespace.js" defer></script>
     <script src="../../src/AssetManager.js" defer></script>
     <script src="../../src/Canvas.js" defer></script>
